# PROVES_CircuitPython_RV3028

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  registers.py  rv3028.py  sonar-project.properties
.github/workflows/: ci.yaml
rv3028/: datetime.py  registers.py  rtc_datetime.py  rv3028.py
test/: test_RV3028.py
test/mocks/: i2cMock.py
tests/: test_RV3028.py  test_rtc_datetime.py
tests/mocks/: i2cMock.py
tests/stubs/: i2c_device.py
