[project]
name = "proves-circuitpython-rv3028"
version = "1.0.0"
description = "RV3028 device driver"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage==7.6.10",
    "pre-commit==4.0.1",
    "pytest==8.3.2",
]

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"

[tool.pytest.ini_options]
pythonpath = "."

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = false
include = [
    "registers.py",
    "rv3028.py",
    ]

[tool.coverage.html]
directory = "coverage-reports/html"

[tool.coverage.xml]
output = "coverage-reports/coverage.xml"
