[project]
name = "proves-circuitpython-rv3028"
version = "1.0.1"
description = "RV3028 device driver"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = []

[dependency-groups]
dev = [
    "coverage==7.9.1",
    "pre-commit==4.2.0",
    "pytest==8.4.1",
]

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"

[tool.pytest.ini_options]
pythonpath = "."

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = false
include = [
    "rv3028/registers.py",
    "rv3028/rv3028.py",
    ]

[tool.coverage.html]
directory = ".coverage-reports/html"

[tool.coverage.xml]
output = ".coverage-reports/coverage.xml"
